Fixed arrow shifting in events (homepage)

--- a/src/components/Home/Sponsor/sponsor.css
+++ b/src/components/Home/Sponsor/sponsor.css
@@ -10,7 +10,7 @@
   font-weight: 700;
   font-size: 4vw;
   color: #1f789f;
-  margin-top: 60px;
+  padding-top: 80px;
 }
 .sponsor-wrapper {
   font-family: "Helvetica";
